#3638 [Feature Request] Allow configuration of Database connection pool from container server (Tomcat, Jetty, Wildfly) https://github.com/adempiere/adempiere/issues/3638 - Add template for the database pool configuration from the application server - Add data source settings to web applications - Add support for wildfly 24.0.1.Final   https://www.wildfly.org/ - Add support for Jetty - Add support for Tomcat 9 - Add configuration files to configure the connection pool for each application server (Tomcat, Jetty, WildFly) - Update startup shell scripts for new services - Add support for Java 17 TLS - Remove obsolete Tomcat configuration - Remove obsolete JBoss configuration - Remove obsolete configuration of Glassfish - Remove support for Java 8 - Rename the JVM Sun to JVM Oracle